--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -1,6 +1,7 @@
 <!-- htmlhint doctype-first:false -->
 <!-- prettier-ignore -->
 {% extends 'base.html' %}
+{% load static %}
 {% load recipe_extras %}
 
 {% block title %}Login - Nomalyze{% endblock %}
@@ -12,7 +13,7 @@
 <div class="flex overflow-hidden fixed inset-0 justify-center items-center">
     <!-- Background Image -->
     <div class="absolute inset-0 z-0">
-        <img src="{{ MEDIA_URL }}recipes/jez-timms-BHD2OxkYGSk-unsplash.jpg" alt="Delicious food"
+        <img src="{% static 'images/jez-timms-BHD2OxkYGSk-unsplash.jpg' %}" alt="Delicious food"
             class="object-cover w-full h-full">
         <div class="absolute inset-0 bg-black bg-opacity-40"></div>
     </div>
