--- a/src/templates/auth/logout.html
+++ b/src/templates/auth/logout.html
@@ -1,5 +1,6 @@
 <!-- htmlhint doctype-first:false -->
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Logged Out - Nomalyze{% endblock %}
 
@@ -7,7 +8,7 @@
 <div class="flex overflow-hidden fixed inset-0 justify-center items-center">
     <!-- Background Image -->
     <div class="absolute inset-0 z-0">
-        <img src="{{ MEDIA_URL }}recipes/jez-timms-BHD2OxkYGSk-unsplash.jpg" alt="Delicious food"
+        <img src="{% static 'images/jez-timms-BHD2OxkYGSk-unsplash.jpg' %}" alt="Delicious food"
             class="object-cover w-full h-full">
         <div class="absolute inset-0 bg-black bg-opacity-40"></div>
     </div>
