--- a/src/recipes/templates/recipes/list.html
+++ b/src/recipes/templates/recipes/list.html
@@ -1,5 +1,6 @@
 <!-- htmlhint doctype-first:false -->
 {% extends 'base.html' %}
+{% load recipe_extras %}
 
 {% block title %}Recipe List - Nomalyze{% endblock %}
 
@@ -14,7 +15,7 @@
         <div
             class="flex overflow-hidden flex-col p-0 w-full max-w-sm bg-white rounded-lg shadow-lg transition-all ease-out lg:grid lg:grid-cols-[35%_65%] lg:max-w-full recipe-card hover:scale-105 hover:shadow-xl">
             <div class="w-full-">
-                <a href="{% url 'recipes:recipe-detail' recipe.pk %}" class=""><img src="{{ recipe.recipe_image.url }}"
+                <a href="{% url 'recipes:recipe-detail' recipe.pk %}" class=""><img src="{{ recipe.recipe_image|media_to_static }}"
                         alt="{{ recipe.name }}" class="object-cover w-full h-full aspect-square">
                 </a>
             </div>
