--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -28,6 +28,8 @@
                         class="px-3 py-1 text-sm font-medium border-b transition-all duration-300 border-accent-300 {% get_nav_classes 'text-accent-300' 'text-accent-600' %} hover:text-white hover:bg-accent-400 hover:border-accent-400 hover:rounded-md">Recipes</a>
                     <a href="{% url 'recipes:recipe-search' %}"
                         class="px-3 py-1 text-sm font-medium border-b transition-all duration-300 border-accent-300 {% get_nav_classes 'text-accent-300' 'text-accent-600' %} hover:text-white hover:bg-accent-400 hover:border-accent-400 hover:rounded-md">Search</a>
+                    <a href="{% url 'about' %}"
+                        class="px-3 py-1 text-sm font-medium border-b transition-all duration-300 border-accent-300 {% get_nav_classes 'text-accent-300' 'text-accent-600' %} hover:text-white hover:bg-accent-400 hover:border-accent-400 hover:rounded-md">About</a>
 
                     {% if user.is_authenticated %}
                     <span
